# mvc

./: README.md  meson.build
data/: com.github.manexim.mvc.appdata.xml  com.github.manexim.mvc.desktop  com.github.manexim.mvc.gschema.xml
debian/: changelog  control  copyright  rules
src/: MainWindow.vala  meson.build
src/Config/: Constants.vala
src/Controllers/: PostController.vala
src/Models/: Post.vala
src/Views/: PostView.vala
