sources = [
    'Config/Constants.vala',
    'Controllers/PostController.vala',
    'Models/Post.vala',
    'Services/Settings.vala',
    'Views/PostView.vala',
    'MainWindow.vala'
]

executable(
    meson.project_name(),
    sources + ['Application.vala'],
    dependencies: dependencies,
    install: true
)
